testkit/src/test/input/check/references/bad-pids.riddl
domain foo {
  context ExampleContext is {
    command DoFoo is {foo: Foo}
    type Foo is {
      bar: String
    }
    entity FooEntity is {
      record FooExampleState is {
        foo: Foo
      }
      state FooExample of FooExampleState is {
        handler HandleFoo is {
          on command DooFoo {
            example Success {
              then set FooExamplexxxx.garbage to !Foo(garbage = "garbage")
            }
          }
        }
      }
    }
  }
}
